new poster and link

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 
         <div class="project-image">
             <a href="https://github.uio.no/IN2000-V25/team-28" target="_blank">
-                <img src="{{ url_for('static', filename='images/vaffposter.png') }}" alt="VAFF Vær App">
+                <img src="{{ url_for('static', filename='images/portfolioposter.png') }}" alt="VAFF Vær App">
             </a>
         </div>
     </div>
@@ -114,7 +114,7 @@
         </p>
     </div>
 
-    <a class="project-link" href="https://www.figma.com/" target="_blank">
+    <a class="project-link" href="https://www.figma.com/files/team/1423271792892588693/project/528611206/Portfolio?fuid=1423271788374760877" target="_blank">
         <i class="fab fa-figma"></i> Link til Figma-prosjekter
     </a>
 </section>
