--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,10 +68,10 @@ body {
 
 /* TEXT BOX */
 .project-text {
-    padding: 2rem;
+    padding: 1rem;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: top;
     font-size: 0.95rem;
 }
 
