--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,19 @@
             Jeg lagde prototyper i Figma. Jeg lagde bakgrunnen av appen i Blender, som representerer 
             nåværende vær og tid på satt lokasjon ved bruk av API. Jeg kodet dette i Kotlin. 
             </p>
+    
+            <p><strong> Gruppeprosjekt på UiO </strong></p>
+            <p>Nominert til UiO sin Met-pris 2025 for kreativ bruk av API</p>
+            
+            <p>
+            Prosjektet gikk ut på å bruke API fra meterologisk instutt. Vi skulle representere 
+            værdata i et valgt case, og lage en brukervennlig mobil app. Jeg hadde ansvar for 
+            design, testing, intervjuer, rapport. Jeg hadde hovedansvar for utseendet av appen. 
+            Jeg lagde prototyper i Figma. Jeg lagde bakgrunnen av appen i Blender, som representerer 
+            nåværende vær og tid på satt lokasjon ved bruk av API. Jeg kodet dette i Kotlin. 
+            </p>
         </div>
+        
 
         <div class="project-image">
             <a href="https://github.uio.no/IN2000-V25/team-28" target="_blank">
@@ -59,10 +71,20 @@
 <!-- APP DESIGN 2 CLOUDCHASE -->
 <section class="project">
     <h2 class="project-title">APP DESIGN : CloudChase</h2>
-    <p class="project-tagline">HTML - Python - CSS</p>
+    <p class="project-tagline">HTML - Python - CSS - Adobe Programmer</p>
 
     <div class="project-content">
         <div class="project-text">
+            <p><strong>Eget Prosjekt</strong></p>
+            <p>Basert på egen interresse for å lære om skyer på en enkel måte, 
+                ville jeg designe en app til å lære om og analysere himmelen. 
+                Denne appen er en enkel og visuelt fokusert webapplikasjon som 
+                lar brukeren lære om ulike skytyper, og laste opp et bilde av 
+                himmelen for å få estimert hvilken skytype bildet viser, ved 
+                hjelp av AI-basert bilde–tekst-analyse. Dette er et prosjekt 
+                jeg ville lage fordi jeg ville ha en enkel plattform å pugge 
+                forksjellige skytyper på.
+            </p>
             <p><strong>Eget Prosjekt</strong></p>
             <p>Basert på egen interresse for å lære om skyer på en enkel måte, 
                 ville jeg designe en app til å lære om og analysere himmelen. 
@@ -93,6 +115,7 @@
 <section class="project figma-section">
     <h2 class="project-title">NETTSIDE PROTOTYPER I FIGMA</h2>
 
+    
 
     <div class="figma-gallery">
         <a href="https://www.figma.com/" target="_blank">
@@ -108,7 +131,7 @@
 
     <div class="project-text figma-text">
         <p>
-            Figma prototype laget for et skoleprosjekt der man testet brukeropplevelse og flyt på nettsider. Vi fikk et tema eller et case å bygge 
+            Figma prototyper laget for et skoleprosjekt der man testet brukeropplevelse og flyt på nettsider. Vi fikk et tema eller et case å bygge 
             nettsiden utifra, og lage en helhetlig nettside med relevant utseende. Jeg brukte Photoshop for bilderedigering og ikoner osv. Faget het 
             Creating Screen Interfaces på Griffith University og lærte oss å prototype nettsider med god interaksjon.
         </p>
