--- a/templates/index.html
+++ b/templates/index.html
@@ -30,28 +30,37 @@
 
     <div class="project-content">
         <div class="project-text">
-            <p><strong> Gruppeprosjekt på UiO </strong></p>
-            <p>Nominert til UiO sin Met-pris 2025 for kreativ bruk av API</p>
+            <p class="project-header"> Gruppeprosjekt på UiO </p>
             
             <p>
             Prosjektet gikk ut på å bruke API fra meterologisk instutt. Vi skulle representere 
             værdata i et valgt case, og lage en brukervennlig mobil app. Jeg hadde ansvar for 
             design, testing, intervjuer, rapport. Jeg hadde hovedansvar for utseendet av appen. 
-            Jeg lagde prototyper i Figma. Jeg lagde bakgrunnen av appen i Blender, som representerer 
-            nåværende vær og tid på satt lokasjon ved bruk av API. Jeg kodet dette i Kotlin. 
+            Jeg lagde prototyper i Figma. Jeg lagde live-bakgrunnen av appen i Blender, som 
+            representerer nåværende vær og tid på satt lokasjon ved bruk av API, jeg kodet 
+            dette i Kotlin. Vi vektla ryddig struktur, ved bruk av Model View Viewmodel. Tyngre 
+            tile-rendring til værkartet gjorde vi ved å sette opp en lokal backend server. 
+            Dette ga meg god erfaring innen apputvikling.
             </p>
-    
-            <p><strong> Gruppeprosjekt på UiO </strong></p>
-            <p>Nominert til UiO sin Met-pris 2025 for kreativ bruk av API</p>
+        
             
+
+            <p class="project-header">Designprosessen </p>
+
             <p>
-            Prosjektet gikk ut på å bruke API fra meterologisk instutt. Vi skulle representere 
-            værdata i et valgt case, og lage en brukervennlig mobil app. Jeg hadde ansvar for 
-            design, testing, intervjuer, rapport. Jeg hadde hovedansvar for utseendet av appen. 
-            Jeg lagde prototyper i Figma. Jeg lagde bakgrunnen av appen i Blender, som representerer 
-            nåværende vær og tid på satt lokasjon ved bruk av API. Jeg kodet dette i Kotlin. 
+            En stor del av prosjektet var å lære om smidig designprosess. Vi brukte en ScrumBan 
+            tilnærming, som gjorde at vi hadde en fleksibel og effektiv fremgang i prosjektet. Vi 
+            involverte brukerne gjennom hver fase av produktet, og fokuserte på å prioritere brukerne
+            og deres behov så mye som mulig. Det var veldig spennende å jobbe så tett med brukerne, og
+            se hvordan deres innspill formet nye retninger til prosjektet. Gjennom studiet har vi hatt
+            flere prosjekter om bruksdesign, og hvert prosjekt ga oss god erfaring. Dette var det 
+            største prosjektet vi hadde gjennom bacheloren, og var svært lærerikt.
             </p>
+
+            <p class="project-header">Nominert til UiO sin Met-pris 2025 for kreativ bruk av API</p>
         </div>
+
+        
         
 
         <div class="project-image">
@@ -75,25 +84,32 @@
 
     <div class="project-content">
         <div class="project-text">
-            <p><strong>Eget Prosjekt</strong></p>
-            <p>Basert på egen interresse for å lære om skyer på en enkel måte, 
-                ville jeg designe en app til å lære om og analysere himmelen. 
-                Denne appen er en enkel og visuelt fokusert webapplikasjon som 
-                lar brukeren lære om ulike skytyper, og laste opp et bilde av 
-                himmelen for å få estimert hvilken skytype bildet viser, ved 
-                hjelp av AI-basert bilde–tekst-analyse. Dette er et prosjekt 
-                jeg ville lage fordi jeg ville ha en enkel plattform å pugge 
-                forksjellige skytyper på.
-            </p>
-            <p><strong>Eget Prosjekt</strong></p>
-            <p>Basert på egen interresse for å lære om skyer på en enkel måte, 
-                ville jeg designe en app til å lære om og analysere himmelen. 
-                Denne appen er en enkel og visuelt fokusert webapplikasjon som 
-                lar brukeren lære om ulike skytyper, og laste opp et bilde av 
-                himmelen for å få estimert hvilken skytype bildet viser, ved 
-                hjelp av AI-basert bilde–tekst-analyse. Dette er et prosjekt 
-                jeg ville lage fordi jeg ville ha en enkel plattform å pugge 
-                forksjellige skytyper på.
+            <p class="project-header"> Eget Prosjekt </p>
+            <p>
+                Basert på egen interesse for å lære om skyer på en enkel og indtuitiv måte,
+                utviklet jeg CloudChase. Det er en enkel, men funksjonell webapplikasjon for å 
+                utforske og analysere himmelen. Målet med prosjektet var å kombinere design, frontend-utvikling
+                og kunstig intelligens i én samlet løsning, som mitt første egne full-stack prosjekt.
+                Dette var et morsomt læringsprosjekt, slik at jeg kunne kombinere styrkene mine innen design og
+                koding.
+                </p>
+                <p class="project-header"> Om Appen </p>
+                <p>
+                CloudChase lar brukeren bla gjennom og lære om ulike skytyper, strukturert etter høyde
+                og kategori. Hver skytype har en egen detaljside med fordypende informasjon. 
+                </p>
+                
+                <p>
+                En sentral del av prosjektet er kamera-/opplastingssiden, der brukeren kan laste opp
+                et bilde av himmelen for å få et estimat på hvilken skytype bildet mest sannsynlig
+                viser. Denne funksjonaliteten er bygget rundt AI-basert bilde–tekst-analyse, der
+                bildet sendes til en analyse-proxy i backend. AI-modellen sammenligner bildet mot
+                forhåndsdefinerte skytyper i applikasjonen og returnerer den mest sannsynlige
+                klassifiseringen. Applikasjonen er bygget med Flask i backend og HTML, CSS. Den er
+                strukturert slik at det er lett å bygge på senere, og jeg har mål om å bytte ut AI delen
+                med en bedre modell senere og legge til flere skytyper. 
+                </p>
+
             </p>
         </div>
 
@@ -118,22 +134,26 @@
     
 
     <div class="figma-gallery">
-        <a href="https://www.figma.com/" target="_blank">
+        <a href="https://www.figma.com/proto/UXEgCcEaIJdI4d5LxZv5kt/2662-Screen-Interfaces-hyaptia?node-id=1-157&p=f&t=UTZPTKlgDd4CtnKs-1&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A157&show-proto-sidebar=1" target="_blank">
             <img src="{{ url_for('static', filename='images/hypatiapreview.png') }}">
         </a>
-        <a href="https://www.figma.com/" target="_blank">
+        <a href="https://www.figma.com/proto/JiikFFH0JDAmB54Lph2B81/offline-timeline-blog?node-id=1-2&p=f&t=sUSfy1lAJhh5kXey-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1" target="_blank">
             <img src="{{ url_for('static', filename='images/reconnectpreview.png') }}">
         </a>
-        <a href="https://www.figma.com/" target="_blank">
+        <a href="https://www.figma.com/proto/rOrBgcApelg5CRQyci2138/tequila?node-id=14-3&p=f&t=dgJi9EF7ThrckzXS-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=14%3A3&show-proto-sidebar=1" target="_blank">
             <img src="{{ url_for('static', filename='images/tequilapreview.png') }}">
         </a>
     </div>
 
     <div class="project-text figma-text">
         <p>
-            Figma prototyper laget for et skoleprosjekt der man testet brukeropplevelse og flyt på nettsider. Vi fikk et tema eller et case å bygge 
-            nettsiden utifra, og lage en helhetlig nettside med relevant utseende. Jeg brukte Photoshop for bilderedigering og ikoner osv. Faget het 
-            Creating Screen Interfaces på Griffith University og lærte oss å prototype nettsider med god interaksjon.
+            <p class="project-header"> Griffith University - Creating Screen Interfaces </p>
+
+            Jeg var på utveklsing i Australia hvor jeg tok forskjellige design-fag. Jeg bruker mye Photoshop og Figma for å lage prototyper og plakater. Jeg har laget en samling av noen av Figma prototypene laget for et 
+            skoleprosjekt der man testet brukeropplevelse og flyt på nettsider. Vi fikk et tema eller et case å bygge 
+            nettsiden utifra, og oppgaven var å lage en helhetlig nettside med relevant utseende. Jeg brukte Photoshop for bilderedigering 
+            og ikoner og lignende, og Figma for layout og interaksjoner. Faget het Creating Screen Interfaces på Griffith University og lærte 
+            oss å prototype nettsider med god interaksjon.
         </p>
     </div>
 
